do2425-seeker/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - host: "api.production.com"
    http:
      paths:
      - path: "/combined"
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80

  - host: "api.preprod.com"
    http:
      paths:
      - path: "/combined"
        pathType: Prefix
        backend:
          service:
            name: gateway-service-preprod
            port:
              number: 80
